--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "@mdi/js": "^5.9.55",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
     "gsap": "^3.6.0",
     "javascript-blowfish": "^1.0.4",
