--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "@mdi/js": "^5.9.55",
+    "aes-js": "^3.1.2",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
     "gsap": "^3.6.0",
